test_case/rust-lang_rust/51099_394015508_3.rs
rust
    struct S2(pub((foo)) ());
    //~^ ERROR expected `,`, found `(`
